# pluvia

./: .git-cliff.toml  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  README.md  pyproject.toml
src/pluvia/: __init__.py  __main__.py
src/pluvia/application/: __init__.py  ana_service.py
src/pluvia/data/shapes/: uf.dbf
src/pluvia/domain/: __init__.py  entities.py  exceptions.py  ports.py
src/pluvia/infrastructure/: __init__.py  config.py  logging.py
src/pluvia/infrastructure/ana/: __init__.py  client.py  constants.py  parser.py
src/pluvia/infrastructure/cache/: __init__.py  intervals.py  station_cache.py
src/pluvia/infrastructure/spatial/: __init__.py  spatial_extent.py
tests/: test_api.py  test_cache.py  test_cli.py  test_client.py  test_client_parser.py  test_error_handling.py  test_intervals.py  test_service_scan.py  test_service_stations.py  test_spatial.py  test_station.py
