[project]
name = "pluvia"
version = "0.1.2"
description = "Catalogação de estações hidrometeorológicas da ANA"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
authors = [
    { name = "Grenda Menezes", email = "grenda.menezes@gmail.com" },
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Hydrology",
]
dependencies = [
    "pandas>=2.0",
    "numpy>=1.24",
    "geopandas>=0.14",
    "shapely>=2.0",
    "zeep>=4.0",
    "rich>=13.0",
    "pyarrow>=14.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
pluvia = "pluvia.__main__:main"

[tool.hatch.build.targets.wheel]
packages = ["src/pluvia"]
include = ["src/pluvia/data/**/*"]

[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["linux-64"]

[tool.pixi.dependencies]
python = ">=3.11"

[tool.pixi.feature.dev.dependencies]
pytest = ">=8.0"
pytest-cov = ">=4.0"
ruff = ">=0.4"
pre-commit = ">=3.0"
bump-my-version = ">=1.0"
python-build = "*"
twine = "*"

[tool.pixi.feature.dev.pypi-dependencies]
pyrefly = ">=0.1"
types-requests = ">=2.0"
types-shapely = ">=2.1.0.20260603, <3"
types-geopandas = ">=1.1.3.20260518, <2"

[tool.pixi.pypi-dependencies]
pluvia = { path = ".", editable = true }

[tool.pixi.environments]
default = { solve-group = "main" }
dev = { features = ["dev"], solve-group = "main" }

[tool.pixi.tasks]
test = "pytest tests/ -v --cov=src/pluvia --cov-report=term-missing"

[tool.pixi.feature.dev.tasks]
lint = "ruff check src/ tests/"
format = "ruff format src/ tests/"
typecheck = "pyrefly check"
bump = "bump-my-version bump"
changelog = "git-cliff --output CHANGELOG.md"
publish = "twine upload dist/*"
build = "python -m build"

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "C4", "SIM", "D"]
ignore = ["E501"]

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.ruff.lint.isort]
force-single-line = true

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["D"]
"src/pluvia/__main__.py" = ["W291"]

[tool.ruff.format]
quote-style = "double"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-v"

[tool.pyrefly]
project-includes = ["src/**/*.py", "tests/**/*.py"]
search-path = ["src"]
replace-imports-with-any = ["zeep", "zeep.transports", "zeep.wsdl.wsdl"]

[tool.bumpversion]
current_version = "0.1.2"
commit = true
tag = true
tag_name = "v{new_version}"

[[tool.bumpversion.files]]
filename = "pyproject.toml"
search = 'version = "{current_version}"'
replace = 'version = "{new_version}"'

[[tool.bumpversion.files]]
filename = "src/pluvia/__init__.py"
search = '__version__ = "{current_version}"'
replace = '__version__ = "{new_version}"'

[[tool.bumpversion.files]]
filename = "README.md"
search = "/ericmiguel/pluma/v{current_version}/"
replace = "/ericmiguel/pluma/v{new_version}/"
